puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Organizations.Manager/content/Views/Organization/_ActivityFeed.cshtml.pp
<div class="activity-feed">
    <div class="row-fluid">
        <div class="span12" style="padding:5px">
            <img src="../../Content/images/rod.PNG" width="50" class="pull-left" />
            <p class="pull-left" style="padding-left: 10px">
                Rod Johnson just signed up for the service
            </p>
        </div>
    </div>
    <hr/>
    <div class="row-fluid">
        <div class="span12" style="padding:5px">
            <img src="../../Content/images/rod.PNG" width="50" class="pull-left" />
            <p class="pull-left" style="padding-left: 10px">
                Rod Johnson was just promoted to expert
            </p>
        </div>
    </div>
</div>
